<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <!-- TOPBAR -->
        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_topbar"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_back_bttn"
                android:contentDescription="@string/btn_back_description"
                android:padding="6dp"
                android:src="@drawable/arrow_left_alt_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tvPageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
<!--CARD FORMULARIO-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/topbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_card">

                <!-- título -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:text="@string/section_activity"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_medium"
                    android:textSize="11sp" />

                <!-- disciplina -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_subject"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_medium"
                    android:textSize="11sp"
                    android:layout_marginBottom="6dp"/>

                <EditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_subject"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textColor="@color/blue_dark"
                    android:textColorHint="@color/input_hint"
                    android:textSize="14sp" />

                <!-- data e horário -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_date"
                            android:textAllCaps="true"
                            android:textColor="@color/blue_medium"
                            android:textSize="11sp"
                            android:layout_marginBottom="6dp"/>

                        <EditText
                            android:id="@+id/etDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input"
                            android:hint="@string/hint_date"
                            android:inputType="date"
                            android:padding="12dp"
                            android:textColor="@color/blue_dark"
                            android:textColorHint="@color/input_hint"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_time"
                            android:textAllCaps="true"
                            android:textColor="@color/blue_medium"
                            android:textSize="11sp"
                            android:layout_marginBottom="6dp"/>

                        <EditText
                            android:id="@+id/etTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input"
                            android:hint="@string/hint_time"
                            android:inputType="time"
                            android:padding="12dp"
                            android:textColor="@color/blue_dark"
                            android:textColorHint="@color/input_hint"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_duration"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_medium"
                    android:textSize="11sp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/etDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_duration"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textColor="@color/blue_dark"
                    android:textColorHint="@color/input_hint"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardForm" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>